--- a/app.css
+++ b/app.css
@@ -7,3 +7,10 @@
   width: 100%;
   margin-bottom: 15px;
 }
+
+.logo {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;  
+}
